--- a/index.html
+++ b/index.html
@@ -12,25 +12,7 @@
     <link rel="icon" type="image/x-icon" href="img/favicon-logo.jpg">
 
     <link rel="stylesheet" type="text/css" href="css/style.css">
-    <!--Stop-->
-
-    <!--
-<link rel="stylesheet" href="css/bootstrap.css">
-<link rel="stylesheet" href="css/bootstrap.min.css">
-
-<script src="js/bootstrap.min.js"></script>
-<script src="js/bootstrap.bundle.js"></script>
--->
-
-
-    <!--
-    
-    <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.2.3/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-rbsA2VBKQhggwzxH7pPCaAqO46MgnOM80zW1RWuH61DGLwZJEdK2Kadq2F9CUG65" crossorigin="anonymous">
-    <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.2.3/dist/js/bootstrap.bundle.min.js" integrity="sha384-kenU1KFdBIe4zVF0s0G1M5b4hcpxyD9F7jL+jjXkk+Q2h455rYXK/7HAuoJl+0I4" crossorigin="anonymous"></script>
--->
-
-    <!--box-shadow: 0 4px 8px rgba(0, 0, 0, 0.3);-->
-
+ 
     <style>
         /* The Modal (background) */
         .modal {
@@ -328,11 +310,11 @@
     <!-- ======= Top Header ======= -->
 
     <div style="background-color: #1e90ffb8;font-family: times new roman; font-size: 18px; text-align: center;">
-        <a href="" style="color:green;text-decoration: none;">EUB LOGIN</a>
+        <a href="" style="color:white;text-decoration: none;">EUB LOGIN</a>
 
-        <a href="" style="color:red;text-decoration: none;">STUDENT LOGIN</a>
+        <a href="" style="color:white;text-decoration: none;">STUDENT LOGIN</a>
 
-        <a href="" style="color:green;text-decoration: none;">FIND PROGRAM</a>
+        <a href="" style="color:white;text-decoration: none;">FIND PROGRAM</a>
     </div>
 
     <div>
