--- a/index.html
+++ b/index.html
@@ -320,7 +320,7 @@
     <div>
 
         <!-- Trigger/Open The Modal -->
-        <button id="myBtn">Open Modal</button>
+        <button id="myBtn1">Open Modal</button>
 
         <!-- The Modal -->
         <div id="myModal" class="modal">
@@ -328,7 +328,7 @@
             <!-- Modal content -->
             <div class="modal-content">
                 <span class="close">&times;</span>
-                <p>Some text in the Modal..</p>
+                <p>Welcome to Login Page.</p>
                 <a href="">EUB LOGIN </a>
                 <a href="">| STUDENT LOGIN |</a>
                 <a href=""> FIND PROGRAM</a>
