--- a/index.html
+++ b/index.html
@@ -320,7 +320,7 @@
     <div>
 
         <!-- Trigger/Open The Modal -->
-        <button id="myBtn1">Open Modal</button>
+        <button id="myBtn">Open Modal</button>
 
         <!-- The Modal -->
         <div id="myModal" class="modal">
