--- a/apply-online-admission.html
+++ b/apply-online-admission.html
@@ -27,6 +27,7 @@
             border: 2px;
             border-radius: 2px;
             background-color: #ffffff;
+            background-image: url(img/logo-eub.png);
             width: 100%;
             padding: 25px;
         }
