--- a/apply-online-admission.html
+++ b/apply-online-admission.html
@@ -27,7 +27,9 @@
             border: 2px;
             border-radius: 2px;
             background-color: #ffffff;
-            background-image: url(img/logo-eub.png);
+            background: url(img/logo-eub.png);
+            filter: grayscale(100%);
+            -webkit-filter: grayscale(100%); /* Safari 6.0 - 9.0 */
             width: 100%;
             padding: 25px;
         }
