--- a/apply-online-admission.html
+++ b/apply-online-admission.html
@@ -26,10 +26,7 @@
             box-sizing: border-box;
             border: 2px;
             border-radius: 2px;
-            background-color: #f9f9f900;
-            background: url(img/logo-eub.png);
-            filter: grayscale(100%);
-            -webkit-filter: grayscale(100%); /* Safari 6.0 - 9.0 */
+            background-color: #ffffff;
             width: 100%;
             padding: 25px;
         }
