--- a/index.html
+++ b/index.html
@@ -310,11 +310,11 @@
     <!-- ======= Top Header ======= -->
 
     <div style="background-color: #1e90ffb8;font-family: times new roman; font-size: 18px; text-align: center;">
-        <a href="" style="color:white;text-decoration: none;">EUB LOGIN</a>
+        <a href="" style="color:white;text-decoration: none;">EUB LOGIN </a>
 
-        <a href="" style="color:white;text-decoration: none;">STUDENT LOGIN</a>
+        <a href="" style="color:white;text-decoration: none;">| STUDENT LOGIN |</a>
 
-        <a href="" style="color:white;text-decoration: none;">FIND PROGRAM</a>
+        <a href="" style="color:white;text-decoration: none;"> FIND PROGRAM</a>
     </div>
 
     <div>
