--- a/class_routine.html
+++ b/class_routine.html
@@ -471,7 +471,7 @@
             zoom: 1
         }
 
-        pdfjsLib.getDocument('https://github.com/Hridoy-Jomadder/EUB/blob/main/img/class-routine/1st-semester-day-evening-batch-class-routine-cse.pdf').then((pdf) => {
+        pdfjsLib.getDocument('https://github.com/Hridoy-Jomadder/EUB/git img/class-routine/1st-semester-day-evening-batch-class-routine-cse.pdf').then((pdf) => {
 
             myState.pdf = pdf;
             render();
