--- a/bachelor-of-computer-science.html
+++ b/bachelor-of-computer-science.html
@@ -286,151 +286,151 @@
     <div class="box">
         <div class="box_row">
             <div class="box_text"><b>Department of Computer Science and Engineering (CSE)</b><br>
-                1. Name of the Program: Bachelor of Science in Computer Science and Engineering (CSE)
+                1. Name of the Program: Bachelor of Science in Computer Science and Engineering (CSE)<br>
 
-                2. a. Name of the Department: Department of Computer Science and Engineering (CSE)
+                2. a. Name of the Department: Department of Computer Science and Engineering (CSE)<br>
 
-                2. b. Name of the Faculty: Science and Engineering
-
-                3. Objectives and Goal
+                2. b. Name of the Faculty: Science and Engineering<br>
+                <br>
+                3. Objectives and Goal<br>
                 The increasing needs for computer science and engineers in worldwide job markets need not to be overemphasized. To keep pace with the advancement in computer science and engineering and provide emphasis in fulfilling the needs, it is essential that efforts to be made both in the public and private sectors to develop human resources in this particular field in Bangladesh.
-
+                <br>
                 The prime objective in establishing the Computer Science and Engineering Department at the European University of Bangladesh is to make a concerted effort towards achieving the goal to provide quality education of 4 years duration at the undergraduate level.
                 To give students of undergraduate programs a rigorous and comprehensive academic training on both the fundamental and advanced aspects of Computer Science and Engineering (CSE).
                 To make provisions for research and development and dissemination of knowledge in the field of Computer Science and Engineering.
                 A student in CSE must not only have a sound basis in the fundamental of Engineering but also should be aware of socio-economic problems of the country. Therefore, courses in science, humanities, economics and management are also included in the curricula. The last two semesters will offer the students a number of alternatives to choose from and to specialize in a particular field. Theory and Sessional work shall be supplemented by Project/Thesis work, seminars and visits to relevant research and industrial organization.
-
+                <br><br>
                 4. Semesters
                 There will be three semesters in an academic year, which are namely:
-
+                <br>
                 Spring Semester; (Duration: January to April)
                 Summer Semester; (Duration: May to August)
                 Fall Semester; (Duration: September to December)
                 Each semester will be of 15 weeks duration with 13 weeks for class teaching, one-week break for examination preparation and one week for examinations.
-
+                <br><br>
                 5. Duration of the Program:
                 The duration for B.Sc. in Computer Science and Engineering program will be four years divided into 12 semesters and Diploma Holders will be 10 semesters.
-
+                <br><br>
                 6. Credit-hour
                 Three credit hours are assigned to a theory course i.e. there are three hours lecture in a week. A class period for theory courses will have a minimum duration of 50 minutes.
                 One credit of lab course will have a minimum of 24 -hours of actual lab works per semester and each lab class will have a minimum duration of 1.5 -hours.
-
+                <br><br>
                 7. Degree Requirements
-                (a) Completion of minimum 160.50 credit hours for Regular Students.
-                (b) Completion of minimum 140.00 credit hours for Diploma Students.
-                (c) Passing of all courses individually and maintaining a minimum CGPA of 2.50.
-
-                8. Admission
-                8.1 Requirement for admission into the CSE program
+                (a) Completion of minimum 160.50 credit hours for Regular Students.<br>
+                (b) Completion of minimum 140.00 credit hours for Diploma Students.<br>
+                (c) Passing of all courses individually and maintaining a minimum CGPA of 2.50.<br>
+                <br><br>
+                8. Admission<br>
+                8.1 Requirement for admission into the CSE program<br>
                 Eligibility of Students for Admission in CSE program: The students must fulfill the following requirements:
-
-                a) Bangladeshi Students
+                <br>
+                a) Bangladeshi Students<br>
                 Applicants must have passed SSC and HSC (or equivalent) examination in Science group with minimum 2nd division in both the examinations or five subjects in O-level and three major subjects (Math, Physics and Chemistry) in A-level education are required. The students who have completed SSC and HSC under GPA system will have to have a minimum CGPA of 2.5. The O- and A-level students must have an average grade of B.
-
-                b) Diploma students
+                <br>
+                b) Diploma students<br>
                 Waiver Courses to be given following the guideline of UGC. Those having diploma engineering in Electrical/Electronics/Computer/Power/Mechanical/ Telecommunication are also eligible for admission with waivers in some courses as per decision of the departmental equivalence committee. Courses may be exempted only from GED group. Courses from Basic sciences, Mathematics and any engineering course will not be exempted. The total exempted credits must not be more than 13.5 credits.
-
-                c) For evening section:
+                <br>
+                c) For evening section:<br>
                 All Eligible students for evening section will be enrolled as part-time.
-
-                d) For Foreign Students
-                (1) Educational qualifications like Bangladeshi students/equivalent.
-                (2) Sex category: Male or female.
-                (3) Must have security clearance from respective Embassy/High Commission in Bangladesh.
-
-                e) Course load / Conditions applicable for enrolling students of CSE Program
-                (i) A full time student can register in a semester for a maximum of 15 credits.
-                (ii) Part-time student can register in a semester for a maximum of 9 credits.
-
+                <br>
+                d) For Foreign Students<br>
+                (1) Educational qualifications like Bangladeshi students/equivalent.<br>
+                (2) Sex category: Male or female.<br>
+                (3) Must have security clearance from respective Embassy/High Commission in Bangladesh.<br>
+                <br>
+                e) Course load / Conditions applicable for enrolling students of CSE Program<br>
+                (i) A full time student can register in a semester for a maximum of 15 credits.<br>
+                (ii) Part-time student can register in a semester for a maximum of 9 credits.<br>
+                <br>
                 8.2 Admission Procedure
                 Admission test will be conducted on the basis of the syllabus of Mathematics, Physics, Chemistry and English (comprehension and functional) subjects of HSC examinations of all boards of secondary and higher secondary school certificates. Admission test will be conducted out of 200 marks and the distribution of marks is given below: </div>
 
-
+                <br>
             8.3 Final Selection
             Students will be selected on the basis of results of the admission test.
-
+            <br><br>
             9. Grading System
             Letter grading will be made to assess students’ performance. The grade will be assigned on the overall evaluation of a student’s performance on the basis of semester final examination, midterm exam, Case studies, tutorial test, term papers, assignment and class attendance in aggregate and whatever is applicable for an individual program. The teachers responsible for the course will determine Grades/GPA. The final result will be prepared by cumulating the grade point average over the courses. The UGC approved common grading system is adopted for assigning a letter grade and grade point. This is given in the following table:
+            <br>
 
 
+            * “F” means failure. Credits for courses with this grade do not apply towards graduation.<br>
 
-            * “F” means failure. Credits for courses with this grade do not apply towards graduation.
+            ** “I” grade is given to students who have fulfilled the majority of the course requirements but have been unable to complete the rest. The student is not required to register for the course in the next semester.<br>
 
-            ** “I” grade is given to students who have fulfilled the majority of the course requirements but have been unable to complete the rest. The student is not required to register for the course in the next semester.
+            *** “W” means withdrawal. A student may decide to withdraw from a course by the deadline with the consent of the instructor and the Academic Advisor.<br>
 
-            *** “W” means withdrawal. A student may decide to withdraw from a course by the deadline with the consent of the instructor and the Academic Advisor.
+            **** “R” means repeat. To improve grade say, F to D or better, more than two times repetition of a course is allowed.<br>
 
-            **** “R” means repeat. To improve grade say, F to D or better, more than two times repetition of a course is allowed.
+            ***** “Y” means audit. An existing student or ex-student may decide to audit a course of his/her interest for improvement of his knowledge for the particular course. In this case, the student pays the full tuition fee for the course, attends the classes, but is not required to sit for the exams and no credit is earned.<br>
 
-            ***** “Y” means audit. An existing student or ex-student may decide to audit a course of his/her interest for improvement of his knowledge for the particular course. In this case, the student pays the full tuition fee for the course, attends the classes, but is not required to sit for the exams and no credit is earned.
-
-            # Subject in which the student gets ‘F’ grades will not be counted towards credit hours requirements and for the calculation of Grade Point Average (GPA)
-
-            10. Performance Evaluation of Courses
+            # Subject in which the student gets ‘F’ grades will not be counted towards credit hours requirements and for the calculation of Grade Point Average (GPA)<br>
+            <br><br>
+            10. Performance Evaluation of Courses<br>
             Final grade in each course will be given on the basis of the performance on class attendance & participation, continuous assessment, mid-term examination and final examination as indicated as under:
-
-            Calculation of GPA.
+            <br>
+            Calculation of GPA.<br>
             Grade Point Average (GPA) is the weighted average of the grade points obtained of all the courses passed/completed by a student. For example, if a student passes/completes n courses in a term having credits of C1, C2, … , Cn and his grade points in these courses are G1, G2, … , Gn respectively then
 
-
+            <br>
 
             The Cumulative Grade Point Average (CGPA) is the weighted average of the GPA obtained in all the terms passed/completed by a student. For example, if a student passes/ completes n terms having total credits of TC1, TC2, … , TCn and his GPA in these terms are GPA1, GPA2, … , GPAn respectively then
 
-
-            A Numerical Example
+            <br>
+            A Numerical Example<br>
             Suppose a student has completed eight courses in a term and obtained the following grades
-
+            <br>
             Suppose a student has completed four terms and obtained the following GPA:
+            <br>
 
-
-
-            Minimum Earned Credit and GPA Requirement for Obtaining Degree
+            <br><br>
+            Minimum Earned Credit and GPA Requirement for Obtaining Degree<br>
             Minimum credit hour requirements for the award of bachelor’s degree in engineering (B.Sc. Engineering) and other discipline will be decided as per existing rules.
-
-            Absence during a Term
+            <br>
+            Absence during a Term<br>
             A student should not be absent from quizzes, tests, etc. during the term. Such absence will naturally lead to reduction in points/marks, which count towards the final grade. Absence in the term final examination for any reason will result in an ‘F’ grade in the corresponding course. A student who has been absent for short periods, up to a maximum of three weeks due to illness, should approach the course teacher(s) or the course coordinator(s) for make-up quizzes or assignments immediately upon return to classes. Such request has to be supported by medical certificate from competent authority.
-
-            11. Symbols, Course Designation and numbering System
+            <br><br>
+            11. Symbols, Course Designation and numbering System<br>
 
             The undergraduate students of different years of the Department of Computer Science and Engineering have to follow the course schedule given below.
-
+            <br>
             11.1 Course Types
             The courses included in the undergraduate curriculam are divided into the following groups:
-
+            <br>
             a) Core Courses
             In CSE discipline, a number of courses are identified as core courses, which form the nucleus of the respective bachelor’s degree program. A student has to complete the entire designated core courses of his/her discipline.
-
+            <br>
             b) Prerequisite Courses
             Some of the core courses are identified as prerequisite courses for a specific subject. A prerequisite course is one, which is required to be completed before some other course(s) can be taken.
-
+            <br>
             c) Elective Courses
             Apart from the core courses, the students can choose courses from a set of elective courses. Elective courses are divided into computer science, software engineering, communication technology and computer engineering
-
+            <br>
             11.2 Course Category
             The letter prefix in any course number indicates the discipline/subject offering the course.
             Letter symbols for course categories are:
-
+            <br>
             Numbering System
             Each course is designated by a maximum of four letter code identifying the department offering the course followed by a three-digit number having the following interpretation:
+            <br>
+            The first digit corresponds to the year/level in which the course is normally taken by the students.<br>
+            The second digit is reserved for departmental use. It usually identifies a specific area/group of study within the department.<br>
+            The last digit is an odd number for theoretical courses and an even number for sessional courses.<br>
+            The course designation system is illustrated by the following example.<br>
 
-            The first digit corresponds to the year/level in which the course is normally taken by the students.
-            The second digit is reserved for departmental use. It usually identifies a specific area/group of study within the department.
-            The last digit is an odd number for theoretical courses and an even number for sessional courses.
-            The course designation system is illustrated by the following example.
-
-
-            11.4 Credits Assignment
+            <br><br>
+            11.4 Credits Assignment<br>
             The assignment of credits to theoretical course is different from that of laboratory course, which is stated as follows:
+            <br>
+            a) For theoretical courses one lecture per week per term is equivalent to one credit.<br>
+            b) for laboratory courses two class hours per week per term is equivalent to one credit.<br>
+            c) Credits are also assigned to project work taken by the students. The amount of credits assigned to such work may vary from one discipline to another.<br>
+            a) Course Structure (Regular Student)<br>
+            The B.Sc in Computer Science and Engineering Program consists of the following categories of courses:<br>
 
-            a) For theoretical courses one lecture per week per term is equivalent to one credit.
-            b) for laboratory courses two class hours per week per term is equivalent to one credit.
-            c) Credits are also assigned to project work taken by the students. The amount of credits assigned to such work may vary from one discipline to another.
-            a) Course Structure (Regular Student)
-            The B.Sc in Computer Science and Engineering Program consists of the following categories of courses:
-
-            12. Course Structure
-            13.List of Courses
-            The list of the courses that will be offered under the program is given below:
+            12. Course Structure<br><br>
+            13.List of Courses<br>
+            The list of the courses that will be offered under the program is given below:্হট
 
         </div>
     </div>
