--- a/bachelor-of-computer-science.html
+++ b/bachelor-of-computer-science.html
@@ -430,7 +430,7 @@
 
             12. Course Structure<br><br>
             13.List of Courses<br>
-            The list of the courses that will be offered under the program is given below:্হট
+            The list of the courses that will be offered under the program is given below:
 
         </div>
     </div>
