--- a/bachelor-of-computer-science.html
+++ b/bachelor-of-computer-science.html
@@ -315,7 +315,7 @@
                 Three credit hours are assigned to a theory course i.e. there are three hours lecture in a week. A class period for theory courses will have a minimum duration of 50 minutes.
                 One credit of lab course will have a minimum of 24 -hours of actual lab works per semester and each lab class will have a minimum duration of 1.5 -hours.
                 <br><br>
-                7. Degree Requirements
+                7. Degree Requirements<br>
                 (a) Completion of minimum 160.50 credit hours for Regular Students.<br>
                 (b) Completion of minimum 140.00 credit hours for Diploma Students.<br>
                 (c) Passing of all courses individually and maintaining a minimum CGPA of 2.50.<br>
@@ -342,17 +342,16 @@
                 (i) A full time student can register in a semester for a maximum of 15 credits.<br>
                 (ii) Part-time student can register in a semester for a maximum of 9 credits.<br>
                 <br>
-                8.2 Admission Procedure
+            8.2 Admission Procedure
                 Admission test will be conducted on the basis of the syllabus of Mathematics, Physics, Chemistry and English (comprehension and functional) subjects of HSC examinations of all boards of secondary and higher secondary school certificates. Admission test will be conducted out of 200 marks and the distribution of marks is given below: </div>
 
-                <br>
+            <br>
             8.3 Final Selection
             Students will be selected on the basis of results of the admission test.
             <br><br>
             9. Grading System
             Letter grading will be made to assess students’ performance. The grade will be assigned on the overall evaluation of a student’s performance on the basis of semester final examination, midterm exam, Case studies, tutorial test, term papers, assignment and class attendance in aggregate and whatever is applicable for an individual program. The teachers responsible for the course will determine Grades/GPA. The final result will be prepared by cumulating the grade point average over the courses. The UGC approved common grading system is adopted for assigning a letter grade and grade point. This is given in the following table:
             <br>
-
 
             * “F” means failure. Credits for courses with this grade do not apply towards graduation.<br>
 
@@ -365,25 +364,21 @@
             ***** “Y” means audit. An existing student or ex-student may decide to audit a course of his/her interest for improvement of his knowledge for the particular course. In this case, the student pays the full tuition fee for the course, attends the classes, but is not required to sit for the exams and no credit is earned.<br>
 
             # Subject in which the student gets ‘F’ grades will not be counted towards credit hours requirements and for the calculation of Grade Point Average (GPA)<br>
-            <br><br>
+            <br>
             10. Performance Evaluation of Courses<br>
             Final grade in each course will be given on the basis of the performance on class attendance & participation, continuous assessment, mid-term examination and final examination as indicated as under:
             <br>
             Calculation of GPA.<br>
             Grade Point Average (GPA) is the weighted average of the grade points obtained of all the courses passed/completed by a student. For example, if a student passes/completes n courses in a term having credits of C1, C2, … , Cn and his grade points in these courses are G1, G2, … , Gn respectively then
-
             <br>
-
             The Cumulative Grade Point Average (CGPA) is the weighted average of the GPA obtained in all the terms passed/completed by a student. For example, if a student passes/ completes n terms having total credits of TC1, TC2, … , TCn and his GPA in these terms are GPA1, GPA2, … , GPAn respectively then
-
             <br>
             A Numerical Example<br>
             Suppose a student has completed eight courses in a term and obtained the following grades
             <br>
             Suppose a student has completed four terms and obtained the following GPA:
             <br>
-
-            <br><br>
+            <br>
             Minimum Earned Credit and GPA Requirement for Obtaining Degree<br>
             Minimum credit hour requirements for the award of bachelor’s degree in engineering (B.Sc. Engineering) and other discipline will be decided as per existing rules.
             <br>
@@ -391,9 +386,8 @@
             A student should not be absent from quizzes, tests, etc. during the term. Such absence will naturally lead to reduction in points/marks, which count towards the final grade. Absence in the term final examination for any reason will result in an ‘F’ grade in the corresponding course. A student who has been absent for short periods, up to a maximum of three weeks due to illness, should approach the course teacher(s) or the course coordinator(s) for make-up quizzes or assignments immediately upon return to classes. Such request has to be supported by medical certificate from competent authority.
             <br><br>
             11. Symbols, Course Designation and numbering System<br>
-
             The undergraduate students of different years of the Department of Computer Science and Engineering have to follow the course schedule given below.
-            <br>
+            <br><br>
             11.1 Course Types
             The courses included in the undergraduate curriculam are divided into the following groups:
             <br>
@@ -405,7 +399,7 @@
             <br>
             c) Elective Courses
             Apart from the core courses, the students can choose courses from a set of elective courses. Elective courses are divided into computer science, software engineering, communication technology and computer engineering
-            <br>
+            <br><br>
             11.2 Course Category
             The letter prefix in any course number indicates the discipline/subject offering the course.
             Letter symbols for course categories are:
