--- a/apply-online-admission.html
+++ b/apply-online-admission.html
@@ -429,7 +429,7 @@
                 Institute Name
                 <input type="text" required>
                 <br><br>
-                <input type="submit">
+                <input type="submit" style="color: aqua;background-color: aquamarine;">
 
 
             </form>
