--- a/apply-online-admission.html
+++ b/apply-online-admission.html
@@ -429,7 +429,7 @@
                 Institute Name
                 <input type="text" required>
                 <br><br>
-                <input type="submit" style="background-color: #4568e7b9;width: 100px;">
+                <input type="submit" style="background-color: #4568e7b9;width: 100px;border-color: #00187ab9;border-radius: 5%;">
             </form>
         </div>
     </div>
