--- a/index.html
+++ b/index.html
@@ -31,26 +31,6 @@
         <a href="" style="color:white;text-decoration: none;"> FIND PROGRAM</a>
     </div>
 
-    <div>
-
-        <!-- Trigger/Open The Modal -->
-        <button id="myBtn">Open Modal</button>
-
-        <!-- The Modal -->
-        <div id="myModal" class="modal">
-
-            <!-- Modal content -->
-            <div class="modal-content">
-                <span class="close">&times;</span>
-                <p>Welcome to Login Page.</p>
-                <a href="">EUB LOGIN </a>
-                <a href="">| STUDENT LOGIN |</a>
-                <a href=""> FIND PROGRAM</a>
-            </div>
-        </div>
-
-    </div>
-
     <!-- ======= Header ======= -->
     <div style="padding: 10px; background-color: #fff;">
         <a href="#">
@@ -488,7 +468,7 @@
     </footer>
 
     <!--Top-->
-    <button onclick="topFunction()" id="myBtn" title="Go to top">Top</button>
+    <!-- <button onclick="topFunction()" id="myBtn" title="Go to top">Top</button> -->
 
     <div style="background-color: #1e50ffb9;color: white;padding: 5px; text-align: center; ">
         <span> © 2012-2023 European University of Bangladesh (EUB), All Rights Reserved. | Developed by Md.Minhazul Islam & Md.Shamim Reza</span>
