--- a/index.html
+++ b/index.html
@@ -479,7 +479,7 @@
 
     <!-- ======= Text Slider javascript Start ======= -->
 
-    <script>
+    <!-- <script>
         const slider = document.getElementById('slider');
         let currentIndex = 0;
 
@@ -495,7 +495,7 @@
 
         setInterval(nextSlide, 2000); // Change slide every 2 seconds (adjust as needed)
 
-    </script>
+    </script> -->
 
 
     <!-- ======= Text Slider javascript End ======= -->
@@ -608,7 +608,7 @@
     </script>
 
     <!--Top-->
-    <script src="javascript/top.js"></script>
+    <!-- <script src="javascript/top.js"></script> -->
 
 
 </body>
