--- a/index.html
+++ b/index.html
@@ -394,7 +394,10 @@
         </div>
     </div>
 
-    <h2 style="text-align:center">Slideshow Gallery</h2>
+    <!-- ======= Our  ======= -->
+    <div class="box">
+        <div class="box_row"
+    <h2 style="text-align:center">EUB Gallery</h2>
 
 <div class="container">
   <div class="mySlides">
@@ -454,8 +457,9 @@
       <img class="demo cursor" src="img/IMG_1943_edited-scaled.jpg" style="width:100%" onclick="currentSlide(6)" alt="Snowy Mountains">
     </div>
   </div>
+   </div>
+  </div>
 </div>
-
 
 
     <!-- ======= Youtube Channel ======= -->
