--- a/index.html
+++ b/index.html
@@ -397,7 +397,7 @@
     <!-- ======= Our  ======= -->
     <div class="box">
     <h2 style="text-align:center">EUB Gallery</h2>
-
+    <div>
 <div class="container">
   <div class="mySlides">
     <div class="numbertext">1 / 6</div>
@@ -458,7 +458,7 @@
   </div>
    </div>
 </div>
-
+</div>
 
     <!-- ======= Youtube Channel ======= -->
     <div class="box">
