--- a/index.html
+++ b/index.html
@@ -396,8 +396,8 @@
 
     <!-- ======= Our  ======= -->
     <div class="box">
-    <h2 style="text-align:center">EUB Gallery</h2>
-    <div>
+    <h2>EUB Gallery</h2>
+
 <div class="container">
   <div class="mySlides">
     <div class="numbertext">1 / 6</div>
@@ -458,7 +458,7 @@
   </div>
    </div>
 </div>
-</div>
+
 
     <!-- ======= Youtube Channel ======= -->
     <div class="box">
