--- a/index.html
+++ b/index.html
@@ -396,7 +396,7 @@
 
     <!-- ======= Our  ======= -->
     <div class="box">
-    <h2>EUB Gallery</h2>
+    <h2 style="color: #fff;">EUB Gallery</h2>
 
 <div class="container">
   <div class="mySlides">
