--- a/index.html
+++ b/index.html
@@ -200,7 +200,7 @@
 
     <!-- ======= Text-slider ======= -->
     <div class="slider-container">
-        <div class="slider-content" id="slider">
+        <div class="slider-content" id="slider1">
             <div class="slider-item">
                 <a href="https://example.com">Slide 1 The European University of Bangladesh has started its journey towards achieving excellence in higher education in this country. </a>
             </div>
@@ -544,8 +544,8 @@
 
     <!-- ======= Text Slider javascript Start ======= -->
 
-    <!-- <script>
-        const slider = document.getElementById('slider');
+    <script>
+        const slider1 = document.getElementById('slider1');
         let currentIndex = 0;
 
         function nextSlide() {
@@ -560,7 +560,7 @@
 
         setInterval(nextSlide, 2000); // Change slide every 2 seconds (adjust as needed)
 
-    </script> -->
+    </script>
 
 
     <!-- ======= Text Slider javascript End ======= -->
