--- a/index.html
+++ b/index.html
@@ -200,7 +200,7 @@
 
     <!-- ======= Text-slider ======= -->
     <div class="slider-container">
-        <div class="slider-content" id="slider1">
+        <div class="slider-content" id="slider">
             <div class="slider-item">
                 <a href="https://example.com">Slide 1 The European University of Bangladesh has started its journey towards achieving excellence in higher education in this country. </a>
             </div>
@@ -545,7 +545,7 @@
     <!-- ======= Text Slider javascript Start ======= -->
 
     <script>
-        const slider1 = document.getElementById('slider1');
+        const slider1 = document.getElementById('slider');
         let currentIndex = 0;
 
         function nextSlide() {
