--- a/index.html
+++ b/index.html
@@ -544,8 +544,8 @@
 
     <!-- ======= Text Slider javascript Start ======= -->
 
-    <script>
-        const slider1 = document.getElementById('slider');
+    <!-- <script>
+        const slider = document.getElementById('slider');
         let currentIndex = 0;
 
         function nextSlide() {
@@ -560,7 +560,7 @@
 
         setInterval(nextSlide, 2000); // Change slide every 2 seconds (adjust as needed)
 
-    </script>
+    </script> -->
 
 
     <!-- ======= Text Slider javascript End ======= -->
