--- a/index.html
+++ b/index.html
@@ -705,7 +705,7 @@
         </script>
 
     <!--Top-->
-    <!-- <script src="javascript/top.js"></script> -->
+    <script src="javascript/top.js"></script>
 
 
 </body>
