--- a/index.html
+++ b/index.html
@@ -533,7 +533,7 @@
     </footer>
 
     <!--Top-->
-    <!-- <button onclick="topFunction()" id="myBtn" title="Go to top">Top</button> -->
+    <button onclick="topFunction()" id="myBtn" title="Go to top">Top</button>
 
     <div style="background-color: #1e50ffb9;color: white;padding: 5px; text-align: center; ">
         <span> © 2012-2023 European University of Bangladesh (EUB), All Rights Reserved. | Developed by Md.Minhazul Islam & Md.Shamim Reza</span>
