--- a/class_routine.html
+++ b/class_routine.html
@@ -470,7 +470,7 @@
             currentPage: 1,
             zoom: 1
         }
-
+///check fille
         pdfjsLib.getDocument('https://github.com/Hridoy-Jomadder/EUB/img/class-routine/1st-semester-day-evening-batch-class-routine-cse.pdf').then((pdf) => {
 
             myState.pdf = pdf;
