--- a/cse_exam_schedule.html
+++ b/cse_exam_schedule.html
@@ -19,9 +19,9 @@
     <style>
         #canvas_container {
             width: 1400px;
-            height: 600px;
+            height: 850px;
             overflow: auto;
-            background: #333;
+            background: #1e90ffb8;
             text-align: center;
             border: solid 3px;
         }
@@ -376,9 +376,9 @@
                 </div>
                 <div style="display: flex;justify-content: space-around;padding-top: 8px;">
                 <div id="navigation_controls">
-                    <button id="go_previous" style="color: white;background-color: skyblue; height: 60px;width:120px;">Previous</button>
+                    <button id="go_previous" style="color: white;background-color: skyblue; height: 60px; width:120px;">Previous</button>
                     <input id="current_page" value="1" type="number" />
-                    <button id="go_next" style="color: white;background-color: skyblue; height: 60px;width:120px;">Next</button>
+                    <button id="go_next" style="color: white;background-color: skyblue; height: 60px; width:120px;">Next</button>
                 </div>
                 <div id="zoom_controls" style="width: 300px;">
                     <button id="zoom_in">Zoom In + </button>
