--- a/index.html
+++ b/index.html
@@ -544,7 +544,7 @@
 
     <!-- ======= Text Slider javascript Start ======= -->
 
-    <!-- <script>
+     <script>
         const slider = document.getElementById('slider');
         let currentIndex = 0;
 
@@ -560,7 +560,7 @@
 
         setInterval(nextSlide, 2000); // Change slide every 2 seconds (adjust as needed)
 
-    </script> -->
+    </script> 
 
 
     <!-- ======= Text Slider javascript End ======= -->
