--- a/about_us.html
+++ b/about_us.html
@@ -13,7 +13,7 @@
 
     <link rel="stylesheet" type="text/css" href="css/style.css">
 
-    <style>
+    <!-- <style>
         .box {
             width: 100%;
             padding: 20px;
@@ -75,7 +75,7 @@
         }
 
         .footer {
-            background-color: #344684;
+            background-color: #1e90ffb8;
             padding: 70px 0;
         }
 
@@ -156,7 +156,7 @@
             }
         }
 
-    </style>
+    </style> -->
 
 </head>
 
