--- a/Administration.html
+++ b/Administration.html
@@ -13,7 +13,7 @@
 
     <link rel="stylesheet" type="text/css" href="css/style.css">
 
-    <style>
+    <!-- <style>
         .box {
             width: 100%;
             padding: 20px;
@@ -174,7 +174,7 @@
             }
         }
 
-    </style>
+    </style> -->
 
 </head>
 
