--- a/index.html
+++ b/index.html
@@ -396,7 +396,7 @@
 
     <!-- ======= Our  ======= -->
     <div class="box">
-    <h2 style="color: #fff;">EUB Gallery</h2>
+    <a href="gallery.html" style="color: #fff;text-decoration: none;"><b>EUB Gallery</b></a>
 
 <div class="container">
   <div class="mySlides">
@@ -541,30 +541,6 @@
 
 
     <!-- ======= Javascript Start ======= -->
-
-    <!-- ======= Text Slider javascript Start ======= -->
-
-     <script>
-        const slider = document.getElementById('slider');
-        let currentIndex = 0;
-
-        function nextSlide() {
-            currentIndex = (currentIndex + 1) % slider.children.length;
-            updateSlider();
-        }
-
-        function updateSlider() {
-            const translateValue = -currentIndex * 100 + '%';
-            slider.style.transform = `translateX(${translateValue})`;
-        }
-
-        setInterval(nextSlide, 2000); // Change slide every 2 seconds (adjust as needed)
-
-    </script> 
-
-
-    <!-- ======= Text Slider javascript End ======= -->
-
 
     <!-- ======= Slider javascript Start ======= -->
     <script type="text/javascript">
