--- a/index.html
+++ b/index.html
@@ -396,7 +396,7 @@
 
     <!-- ======= Our  ======= -->
     <div class="box">
-    <a href="gallery.html" style="color: #fff;text-decoration: none;"><b>EUB Gallery</b></a>
+    <h2><a href="gallery.html" style="color: #fff;text-decoration: none;">EUB Gallery</a></h2>
 
 <div class="container">
   <div class="mySlides">
