--- a/gallery.html
+++ b/gallery.html
@@ -214,6 +214,7 @@
    </div>
 </div>
 
+
     <!-- ======= Footer ======= -->
     <footer class="footer">
         <div class="container">
@@ -283,6 +284,30 @@
 
 
     <!-- ======= Javascript Start ======= -->
+
+    <!-- ======= Text Slider javascript Start ======= -->
+
+     <script>
+        const slider = document.getElementById('slider');
+        let currentIndex = 0;
+
+        function nextSlide() {
+            currentIndex = (currentIndex + 1) % slider.children.length;
+            updateSlider();
+        }
+
+        function updateSlider() {
+            const translateValue = -currentIndex * 100 + '%';
+            slider.style.transform = `translateX(${translateValue})`;
+        }
+
+        setInterval(nextSlide, 2000); // Change slide every 2 seconds (adjust as needed)
+
+    </script> 
+
+
+    <!-- ======= Text Slider javascript End ======= -->
+
 
     <!-- ======= Slider javascript Start ======= -->
     <script type="text/javascript">
