--- a/index.html
+++ b/index.html
@@ -541,6 +541,26 @@
 
 
     <!-- ======= Javascript Start ======= -->
+    
+    <!-- ======= Text Slider javascript Start ======= -->
+
+    <script>
+        const slider = document.getElementById('slider');
+        let currentIndex = 0;
+
+        function nextSlide() {
+            currentIndex = (currentIndex + 1) % slider.children.length;
+            updateSlider();
+        }
+
+        function updateSlider() {
+            const translateValue = -currentIndex * 100 + '%';
+            slider.style.transform = `translateX(${translateValue})`;
+        }
+
+        setInterval(nextSlide, 2000); // Change slide every 2 seconds (adjust as needed)
+
+    </script> 
 
     <!-- ======= Slider javascript Start ======= -->
     <script type="text/javascript">
