--- a/gallery.html
+++ b/gallery.html
@@ -287,7 +287,7 @@
 
     <!-- ======= Text Slider javascript Start ======= -->
 
-     <script>
+     <!-- <script>
         const slider = document.getElementById('slider');
         let currentIndex = 0;
 
@@ -304,7 +304,7 @@
         setInterval(nextSlide, 2000); // Change slide every 2 seconds (adjust as needed)
 
     </script> 
-
+ -->
 
     <!-- ======= Text Slider javascript End ======= -->
 
