--- a/index.html
+++ b/index.html
@@ -398,7 +398,7 @@
     <div class="box">
     <h2><a href="gallery.html" style="color: #fff;text-decoration: none;">EUB Gallery</a></h2>
 
-<div class="container">
+<!-- <div class="container"> -->
   <div class="mySlides">
     <div class="numbertext">1 / 6</div>
     <img src="img/Business-Buzz46.jpg" style="width:100%">
@@ -456,7 +456,7 @@
       <img class="demo cursor" src="img/IMG_1943_edited-scaled.jpg" style="width:100%" onclick="currentSlide(6)" alt="Snowy Mountains">
     </div>
   </div>
-   </div>
+   <!-- </div> -->
 </div>
 
 
