--- a/gallery.html
+++ b/gallery.html
@@ -151,7 +151,7 @@
 
     <!-- ======= Our  ======= -->
     <div class="box">
-<div class="container">
+<div class="container"><br><br>
     <h2 style="color: #fff;">EUB Gallery</h2>
   <div class="mySlides">
     <div class="numbertext">1 / 6</div>
