--- a/gallery.html
+++ b/gallery.html
@@ -152,7 +152,7 @@
     <!-- ======= Our  ======= -->
     <div class="box">
 <div class="container"><br><br>
-    <h2 style="color: #fff;">EUB Gallery</h2>
+    <h2 style="color: #fff;">EUB Gallery</h2><br>
   <div class="mySlides">
     <div class="numbertext">1 / 6</div>
     <img src="img/Business-Buzz46.jpg" style="width:100%">
