--- a/gallery.html
+++ b/gallery.html
@@ -151,8 +151,8 @@
 
     <!-- ======= Our  ======= -->
     <div class="box">
-<div class="container"><br><br>
-    <h2 style="color: #fff;">EUB Gallery</h2><br>
+        <h2 style="color: #fff;">EUB Gallery</h2><br>
+<div class="container">
   <div class="mySlides">
     <div class="numbertext">1 / 6</div>
     <img src="img/Business-Buzz46.jpg" style="width:100%">
