--- a/index.html
+++ b/index.html
@@ -292,7 +292,7 @@
                     <th>Graduate Undergraduate Programs</th>
                 </tr>
                 <tr>
-                    <td><a href="" style="text-decoration: none;">Computer Science Engineering</a></td>
+                    <td><a href="bachelor-of-computer-science.html" style="text-decoration: none;">Computer Science Engineering</a></td>
                 </tr>
                 <tr>
                     <td><a href="" style="text-decoration: none;">Civil Engineering</a></td>
