--- a/bachelor-of-computer-science.html
+++ b/bachelor-of-computer-science.html
@@ -7,7 +7,7 @@
 <meta name="author" content="Hridoy Jomadder">
 
 <head>
-    <title>About Us || EUROPEAN UNIVERSITY OF BANGLADESH</title>
+    <title>Bachelor of Science in Computer Science and Engineering || EUROPEAN UNIVERSITY OF BANGLADESH</title>
 
     <link rel="icon" type="image/x-icon" href="img/favicon-logo.jpg">
 
