--- a/department-of-cse.html
+++ b/department-of-cse.html
@@ -109,6 +109,10 @@
             display: table;
             clear: both;
         }
+           //add 
+        .bordershadow:hover {
+          box-shadow: 0 0 6px rgba(35, 173, 278, 1);
+        }
 
         /* Responsive columns */
         @media screen and (max-width: 600px) {
@@ -355,6 +359,7 @@
                 <h2 style="text-align:center">Department of Computer Science & Engineering</h2>
                 <br>
                 <div class="card">
+                    <div class="bordershadow"> 
                     <img src="img/department-of-cse/Obaidur-Rahman.jpg" alt="Obaidur Rahman" style="width:100%">
                     <h2 style="font-family: times new roman;">Name: Obaidur Rahman</h2>
                     <p class="title" style="font-family: times new roman;">Position: Associate Professor & Chairman</p>
@@ -369,6 +374,7 @@
                         <a href="#"><i class="fa fa-facebook"></i></a>
                     </div>
                     <!--                    <p><button>Contact</button></p>-->
+                </div>
                 </div>
                 <br>
                 <!-- =======Assistant Professor======= -->
